Added Alembic, audit pagination, updated seed script, enabled competition export, added support for hiding gps map, added docs
